[ENG-4551] Cesium/second batch of bug fixes (#1880)
## Purpose

More small bug fixes for the cesium release.

## Summary of Changes
* Keep popular container from being too long
* Fix registries node navbar issues for mobile and non-mobile
* Add margin to collected metadata buttons
* Add margin to sign-up-form input fields
* Make node-card responsive dropdown go away when deleting
* Fix styling on Learn More button
* Hide 'OSF' from navbar product display in mobile
* Add spacing to change-password input fields
* Fix account settings security panel styling
* Fix active highlight for dev apps and tokens sub-routes
* Fix form element spacing on dev-apps form
* Make copyable-text button appear next to field
* Make token create form validate for presence of name field

--- a/app/dashboard/styles.scss
+++ b/app/dashboard/styles.scss
@@ -204,7 +204,6 @@
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
-        min-height: 650px;
         background: $color-bg-gray-blue-dark;
         padding-top: 25px;
         color: $color-text-white;
