--- a/app/styles/_global.scss
+++ b/app/styles/_global.scss
@@ -411,3 +411,39 @@ fieldset[disabled] .form-control {
     border-top: 1px solid transparent;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
 }
+
+
+.visible-sm,
+.visible-xs {
+    display: none !important;
+}
+
+@media (max-width: 767px) {
+    .visible-xs {
+        display: block !important;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .visible-sm {
+        display: block !important;
+    }
+}
+
+@media (max-width: 767px) {
+    .hidden-xs {
+        display: none !important;
+    }
+}
+
+@media (min-width: 768px) {
+    .navbar-toggle {
+        display: none;
+    }
+}
+
+@media (max-width: 992px) {
+    .navbar-collapse.collapse.in {
+        display: block !important;
+    }
+}
